@@ -1,3 +1,10 @@
+2017-03-20  Reini Urban  <reini.urban@gmail.com>
+            Bruno Haible  <bruno@clisp.org>
+
+	Fix intparam.h/floatparam.h Makefile rule for parallel make.
+	* makemake.in (PARAMS): Use a different temporary file for each target
+	file.
+
 2017-03-20  Bruno Haible  <bruno@clisp.org>
 
 	Bump version number after beta release.
